--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ Although you can use them, for a more unique website, replace these images with 
     </section>
     
 	<!-- Footer -->
-    <footer class="page-footer">
+    <footer class="page-footer" align in center> 
     
     	<!-- Contact Us -->
         <div class="contact">
